feat: added rest controller for Payment, added UserAdminSeeder and fix name of column for password on table users